# personal-library-manager

./: README.md  pyproject.toml
src/personal_library_manager/: __init__.py  config.py  main.py
