[project]
name = "personal-library-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
personal-library-manager = "personal_library_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
